<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".basicTab">

    <TextView
        android:id="@+id/basic_direction_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:paddingTop="30dp"
        android:text="@string/basic_direction_text"
        android:textSize="15dp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/happy_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:text="@string/happy_count"
        android:textColor="@color/happy"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/productive_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:text="@string/productive_count"
        android:textColor="@color/productive"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/sad_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:text="@string/sad_count"
        android:textColor="@color/sad"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/boring_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:text="@string/boring_count"
        android:textColor="@color/boring"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/tired_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:text="@string/tired_count"
        android:textColor="@color/tired"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/stressed_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:text="@string/stressed_count"
        android:textColor="@color/stressed"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/fantastic_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:text="@string/fantastic_count"
        android:textColor="@color/fantastic"
        android:textStyle="bold"/>
</LinearLayout>